--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 							<section>
 								<span class="icon brands style2 major fa-google-play"></span>
 								<h3>Mobile App Development</h3>
-								<p>A year of mobile application development skill using Java and Kotlin.</p>
+								<p>A year of mobile application development experience using Java and Kotlin.</p>
 							</section>
 							<section>
 								<span class="icon solid style2 major fa-code"></span>
 								<h3>C++</h3>
-								<p>A year of C++ programming experience. My C++ projects include sensors, ...</p>
+								<p>A year of C++ programming experience for embedded applications. This includes events and finite state machines; mobile robot control; and networking.  </p>
 							</section>
 							<section>
 								<span class="icon solid style2 major fa-database"></span>
