--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/uw2.png" alt="" />
+							<img src="images/uw2.png" style="height: 100%; width: 100%; object-fit:fit"/>
 						</div>
 					</section>
 
