--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/cjj.JPG" alt="" style="height: 100%; width: 100%; object-fit:fit"  />
+							<img src="images/cjj.JPG" alt="" style="height: 100%; width: 100%; object-fit:contain"  />
 						</div>
 					</section>
 
@@ -178,7 +178,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/uw2.png" style="height: 100%; width: 100%; object-fit:fit"/>
+							<img src="images/uw2.png" style="height: 100%; width: 100%; object-fit:contain"/>
 						</div>
 					</section>
 
