--- a/index.html
+++ b/index.html
@@ -172,9 +172,12 @@
 								<li>Deep Learning</li>
 								<li>Software Engineering for Embedded Applications</li>
 								<li>Mobile Applications for Sensing and Control</li>
+								<li>The Self Driving Car: Intro To AI For Mobile Robots</li>
+								<li>Analytical Methods For Electrical Engineering</li>
+								<li>Engineering Entrepreneurial Systems And Design</li>
 							</ul>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="docs/UWUnofficialTranscript_JJ.pdf" class="button">Transcript</a></li>
 							</ul>
 						</div>
 						<div class="image">
