--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jia Jie Choong</h1>
-							<p class="big"><b>UW '21, M.Eng. Student,<br> Machine Learning Engineer, Data Scientist</b></p>
-							<p class="major">I'm a graduate of UW's Class of 2021 and my passion is Machine Learning and Data Science.<br> My interests include software design and development; artificial intelligence; machine learning; computer vision; and neuroscience. </p>
+							<p class="big"><b>UW '21, M.S.,<br> Machine Learning Engineer, Data Scientist</b></p>
+							<p class="major">I'm a graduate of UW's Class of 2021 and my passion lies in Machine Learning and Software Development.<br> My interests include software design and development; artificial intelligence; machine learning; computer vision; and neuroscience. </p>
 							<p class="big"><b>University of Washington</b></p>
 							<ul>
 								<li style="margin-top:-30px;">Master of Science in Electrical and Computer Engineering</li>
