--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="content">
 							<h1>Jia Jie Choong</h1>
 							<p class="big"><b>UW '21, M.S.,<br> Machine Learning Engineer, Data Scientist</b></p>
-							<p class="major">I'm a graduate of UW's Class of 2021 and my passion lies in Machine Learning and Software Development.<br> My interests include software design and development; artificial intelligence; machine learning; computer vision; and neuroscience. </p>
+							<p class="major">I am a highly motivated graduate of UW's Class of 2021, driven by a deep-rooted passion for the intersecting domains of Data Science and Software Engineering. With a strong foundation in Machine Learning and Software Development, my career aspirations encompass leveraging advanced algorithms and cutting-edge technologies to derive valuable insights from data and build robust software systems. My diverse interests span the realms of software design and development, artificial intelligence, machine learning, computer vision, and neuroscience, fueling my curiosity to explore innovative solutions and contribute to transformative projects at the intersection of data-driven decision-making and software innovation </p>
 							<p class="big"><b>University of Washington</b></p>
 							<ul>
 								<li style="margin-top:-30px;">Master of Science in Electrical and Computer Engineering</li>
