--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/uw2.png" alt="" style="height: 100%; width: 100%; object-fit:fit" />
+							<img src="images/uw2.png" alt="" style="height: 100%; width: 100%; object-fit:fill" />
 						</div>
 					</section>
 
