--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jia Jie Choong</h1>
-							<p class="big"><b>UW '21, M.S.,<br> Machine Learning Engineer, Data Scientist</b></p>
+							<p class="big"><b>Machine Learning Engineer, Data Scientist</b></p>
 							<p>I am a highly motivated graduate of UW's Class of 2021, driven by a deep-rooted passion for the intersecting domains of Data Science and Software Engineering. With a strong foundation in Machine Learning and Software Development, my career aspirations encompass leveraging advanced algorithms and cutting-edge technologies to derive valuable insights from data and build robust software systems. My diverse interests span the realms of software design and development, artificial intelligence, machine learning, computer vision, and neuroscience, fueling my curiosity to explore innovative solutions and contribute to transformative projects at the intersection of data-driven decision-making and software innovation </p>
 							<p class="big"><b>University of Washington</b></p>
 							<ul>
