--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" >
 						<div class="content">
-							<h2>Coursework, UW 2021</h2>
+							<h2>Coursework, UW </h2>
 							<p>The focus of my master studies in Electrical and Computer Engineering at University of Washington are machine learning, deep learning, and computer vision.</p>
 							<ul>
 								<li>Deep Learning for Big Visual Data</li>
